# 0.018
# API changes, stable version

# 0.017
# [Sessions] Linking to Session page, data not displaying correctly yet.
# Questionable Attempt at fetching subsession data

# 0.016
# [Home] Added scrolling background animation to landing page.

# 0.015
# API changes.
# [ListSessions] Dispaying response from API on front end

# 0.014
# React running
# [ListSessions] fetches Session data and is returned in console.

# 0.013
# Installed Node on server. Configuring Routing. API Folder hidden

# 0.012
# Stable version before introducing React

# 0.011
# Server file structure changes 

# 0.010
# [Profile] Page added. Pulls data directly
# {Profile} Link established. Needs full implementation
# {Functions} _getCurrentTime() updated, userProfile() to link {Profile}
# [Style]


# 0.009
# [Presenter] bug fix
# [Presenters] Finds all the files associated with the subession, allowing user to download them
# [Header/Navi] Updated

# 0.008
# [Moderator] Session link established
# (Fetches session title and subsession data)
# Utility functions expanded
# [Session] title properly being displayed in Session view

# 0.007 
# branch for big commits pog

# 0.006
# UX/UI Links in place. Functionaly needs to be implemented.

# 0.005
# File upload/download works, UX/UI WIP, RDBMS structure in place

# 0.004
# Migrated server from local VM to AWS

# v0.003
# Disabled site from internet access due to vulnerabilities 

# v0.002
# Started implementing security features


# v0.001
# Made website available to public via 24mp.world