@@ -11,8 +11,9 @@
 		case "POST":
 			$session = json_decode(file_get_contents('php://input'), true);
 			$tmp = $session['session_id'];
-			$subsessions = array(); 
 			$session_id = $tmp;
+			
+			$subsessions = array(); 
 			$sql = "SELECT * FROM subsessionData WHERE _session_id='$session_id'";
 			$results = mysqli_query($conn, $sql);
 			$resultCheck = mysqli_num_rows($results);
@@ -24,8 +25,11 @@
 			break;
 
 		case "GET":
+			$session = json_decode(file_get_contents('php://input'), true);
+			$tmp = $session['session_id'];
+			$session_id = $tmp;
+
 			$subsessions = array(); 
-			$session_id = $_GET['session_id'];
 			$session_id = 11;
 			$sql = "SELECT * FROM subsessionData WHERE _session_id='$session_id';";
 			$results = mysqli_query($conn, $sql);
@@ -34,7 +38,7 @@
 			while($row = mysqli_fetch_assoc($results)){
 				$subsessions[] = $row;
 			   }
-	
+			   
 			   echo json_encode($subsessions);
 			exit();
 			break;
